# aoc-2016

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/day_01/: a.py  b.py  shared.py
src/day_02/: a.py  b.py  shared.py
src/day_03/: a.py  b.py  shared.py
src/day_04/: a.py  b.py  shared.py
src/day_05/: a.py  b.py  shared.py
src/day_06/: a.py  b.py  shared.py
src/day_07/: a.py  b.py  shared.py
src/day_08/: a.py  b.py  shared.py
src/day_09/: a.py  b.py
src/day_10/: a.py  b.py  instructions.py  models.py  parser.py  solver.py
src/day_11/: a.py  b.py  models.py  parser.py  solver.py
src/day_12/: a.py  b.py  fibonacci.py  machine.py  parser.py  solver.py
src/day_13/: a.py  b.py  solver.py
src/day_14/: a.py  b.py  solver.py
src/day_15/: a.py  b.py  models.py  parser.py  solver.py
src/day_16/: a.py  b.py  solver.py
src/day_17/: a.py  b.py  models.py  parser.py  solver.py
src/day_18/: a.py  b.py  parser.py  solver.py
src/day_19/: a.py  b.py  parser.py  solver.py
src/day_20/: a.py  b.py  models.py  parser.py  solver.py
src/day_21/: a.py  b.py  models.py  parser.py
src/day_22/: a.py  b.py  models.py  parser.py
src/day_23/: a.py  b.py  parser.py
src/day_24/: a.py  b.py  models.py  parser.py
src/shared/: functions.py  machine.py  point.py
test/test_day_01/: test_a.py  test_b.py
test/test_day_02/: test_a.py  test_b.py
test/test_day_03/: test_a.py  test_b.py
test/test_day_04/: test_a.py  test_b.py  test_shared.py
test/test_day_05/: test_a.py  test_b.py
utils/: create_files.py  submit.py
utils/templates/: part.py
(+51 files in other folders)
