[tool.poetry]
name = "advent-of-code-2016"
version = "0.1.0"
description = ""
authors = ["Tyler Hoffman <tyler.c.hoffman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
